When mature, changes should be merged into master *as a merge commit*  and this changelog file updated.

In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 

24th April 2020
- DEVELOPER:
   * dummyScanner correctly saves tiles for stitching via BT.bake
   * verbose in recipe now stops the messages relating to the scanner settings parameters not being available.


23rd April 2020
- DEVELOPER:
   * downsampled tile size set using the number of microns per pixel rather than a fixed size in pixels.
   * previewScans and Bake largely work with the dummyScanner.
   * x/y speed set to default value on startup.
   * The update interval for the preview image can now be altered using a property. 
   * Add option to disable axis ready check during acquisition

21st April 2020
- DEVELOPER: 
   * dummyScanner uses previewStacks as dataset format.
   * dummyScanner has a basic UI: it can be started from the main BT menu and has a simple GUI with features available from menu.
   * Restructure acquisition_view into separate files


6th November 2019
- USER: potential out of bounds stage errors are caught before cutting begins.


24th September 2019
- USER: add "affineMatGen" tool for easily generating affine transform matrices to paste into config files. 


4rd September 2019
- DEVELOPER: dummyScanner displays current tile to screen. 
- USER: Bugfix to slicing speed. 


3rd September 2019
- USER: MaiTai laser does not automatically turn off if system has been paused for long periods.


30 August 2019
- DEVELOPER: Update dummy mode so it works again


28th June 2019
- USER: Add options for setting pixel bin factor and sample rate for linear scanners
- USER: BUGFIX -- Fail gracefully if an error happens during preview scan. 


26th June 2019
- USER: a bunch of bug fixes. Some fairly significant

