@@ -6,6 +6,10 @@ When mature, changes should be merged into master *as a merge commit*  and this 
 In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
 The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 
 
+
+27th April 20202
+- USER: remove scanner ID (name) and scan type ("tile") from status text. This is not useful information and/or it can be found elsewhere. 
+
 24th April 2020
 - DEVELOPER:
    * dummyScanner correctly saves tiles for stitching via BT.bake
